Update Indexing for metric display

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,4 +6,9 @@ datahub:
     core-pool-size: 4
     max-pool-size: 16
     queue-capacity: 100
+    simulated-delay-ms: 1000
     chunk-size: 20
+    chunk-timeout-ms: 2000
+    chunk-max-retries: 1
+  llm:
+    simulated-latency-ms: 300
