--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
-        <relativePath/> <!-- always lookup from repo -->
+        <version>3.5.7</version>
+        <relativePath/>
     </parent>
 
     <properties>
@@ -30,9 +30,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- For JSON handling / Jackson already included via starter-web -->
-
-        <!-- Optional: validation annotations for request DTOs -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -45,10 +42,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
 
 
         <!-- MapStruct runtime -->
