--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,11 +12,10 @@ datahub:
     chunk-max-retries: 1
   llm:
     simulated-latency-ms: 300
-    provider: fake
-#    provider: openai
-#    base-url: https://api.openai.com
-#    api-key:
-#    model:
+#    provider: fake
+    provider: ollama
+    base-url: http://localhost:11434
+    model: phi3:mini
 
 spring:
   datasource:
