--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,7 @@ spring:
     hibernate:
       ddl-auto: update   # dev only
     show-sql: true
+    open-in-view: false
     properties:
       hibernate:
         format_sql: true
