--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,16 +24,6 @@ management:
 spring:
   kafka:
     bootstrap-servers: localhost:9092
-    consumer:
-      group-id: social-distro-workers
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: "*"
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
   threads:
     virtual:
       enabled: true
@@ -45,7 +35,7 @@ spring:
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   jpa:
-    defer-datasource-initialization: true
+    defer-datasource-initialization: false
     hibernate:
       ddl-auto: update
     show-sql: true
