--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ datahub:
   llm:
     simulated-latency-ms: 300
     provider: ollama
-    base-url: http://localhost:11434
+    base-url: http://ollama:11434
     model: phi3:mini
 
 management:
@@ -51,8 +51,8 @@ spring:
     defer-datasource-initialization: false
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     open-in-view: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
