--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,30 @@ services:
       - postgres_data:/var/lib/postgresql
     networks:
       - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      retries: 5
+
+  redis:
+    image: redis:alpine
+    container_name: social-distro-cache
+    ports:
+      - "6379:6379"
+    networks:
+      - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       retries: 5
 
@@ -27,6 +49,11 @@ services:
       - ${HOME}/.ollama:/root/.ollama
     networks:
       - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '4.0'
+          memory: 4G
     healthcheck:
       test: ["CMD", "ollama", "list"]
       interval: 5s
@@ -65,6 +92,11 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     networks:
       - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
     ports:
       - "2181:2181"
 
@@ -77,6 +109,11 @@ services:
       - "9092:9092"
     networks:
       - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -97,6 +134,11 @@ services:
       - "8080:8080"
     networks:
       - datahub-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
