--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: changes/001-initial-schema.sql
       relativeToChangelogFile: true
+  - include:
+      file: 003-add-version-columns.sql
+      relativeToChangelogFile: true
